// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Calendar /> has defaults 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to June 2020
          </title>
          <use
            xlink:href="#arrow-left.svg"
          />
        </svg>
        <button
          class="year-button"
        >
          July 2020
          <svg
            class="change-year-icon"
            height="6"
            role="img"
            width="10"
          >
            <use
              xlink:href="#caret-down.svg"
            />
          </svg>
        </button>
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to August 2020
          </title>
          <use
            xlink:href="#arrow-right.svg"
          />
        </svg>
      </div>
      <table
        class="calendar-grid"
        role="grid"
      >
        <thead>
          <tr>
            <th
              class="weekday"
            >
              S
            </th>
            <th
              class="weekday"
            >
              M
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              W
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              F
            </th>
            <th
              class="weekday"
            >
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              aria-label="June 28"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593345600000"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="June 29"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593432000000"
              role="gridcell"
            >
              29
            </td>
            <td
              aria-label="June 30"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593518400000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 1"
              aria-selected="false"
              class="date"
              data-epoch="1593604800000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="July 2"
              aria-selected="false"
              class="date"
              data-epoch="1593691200000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="July 3"
              aria-selected="false"
              class="date"
              data-epoch="1593777600000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="July 4"
              aria-selected="false"
              class="date"
              data-epoch="1593864000000"
              role="gridcell"
            >
              4
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 5"
              aria-selected="false"
              class="date"
              data-epoch="1593950400000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="July 6"
              aria-selected="false"
              class="date"
              data-epoch="1594036800000"
              role="gridcell"
            >
              6
            </td>
            <td
              aria-label="July 7"
              aria-selected="false"
              class="date"
              data-epoch="1594123200000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="July 8"
              aria-selected="false"
              class="date"
              data-epoch="1594209600000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="July 9"
              aria-selected="false"
              class="date"
              data-epoch="1594296000000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="July 10"
              aria-selected="false"
              class="date"
              data-epoch="1594382400000"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="July 11"
              aria-selected="false"
              class="date"
              data-epoch="1594468800000"
              role="gridcell"
            >
              11
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 12"
              aria-selected="false"
              class="date"
              data-epoch="1594555200000"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="July 13"
              aria-selected="false"
              class="date"
              data-epoch="1594641600000"
              role="gridcell"
            >
              13
            </td>
            <td
              aria-label="July 14"
              aria-selected="false"
              class="date"
              data-epoch="1594728000000"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="July 15"
              aria-selected="false"
              class="date"
              data-epoch="1594814400000"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="July 16"
              aria-selected="false"
              class="date"
              data-epoch="1594900800000"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="July 17"
              aria-selected="false"
              class="date"
              data-epoch="1594987200000"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="July 18"
              aria-selected="false"
              class="date"
              data-epoch="1595073600000"
              role="gridcell"
            >
              18
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 19"
              aria-selected="false"
              class="date"
              data-epoch="1595160000000"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="July 20"
              aria-selected="false"
              class="date"
              data-epoch="1595246400000"
              role="gridcell"
            >
              20
            </td>
            <td
              aria-label="July 21"
              aria-selected="false"
              class="date"
              data-epoch="1595332800000"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="July 22"
              aria-selected="false"
              class="date"
              data-epoch="1595419200000"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="July 23"
              aria-selected="false"
              class="date"
              data-epoch="1595505600000"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="July 24"
              aria-selected="false"
              class="date"
              data-epoch="1595592000000"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="July 25"
              aria-selected="false"
              class="date"
              data-epoch="1595678400000"
              role="gridcell"
            >
              25
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 26"
              aria-selected="false"
              class="date"
              data-epoch="1595764800000"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="July 27"
              aria-selected="false"
              class="date"
              data-epoch="1595851200000"
              role="gridcell"
            >
              27
            </td>
            <td
              aria-label="July 28"
              aria-selected="false"
              class="date"
              data-epoch="1595937600000"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="July 29"
              aria-selected="false"
              class="highlighted-date"
              data-epoch="1596024000000"
              role="gridcell"
              tabindex="0"
            >
              29
            </td>
            <td
              aria-label="July 30"
              aria-selected="false"
              class="date"
              data-epoch="1596110400000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 31"
              aria-selected="false"
              class="date"
              data-epoch="1596196800000"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="August 1"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596283200000"
              role="gridcell"
            >
              1
            </td>
          </tr>
          <tr>
            <td
              aria-label="August 2"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596369600000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="August 3"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596456000000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="August 4"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596542400000"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="August 5"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596628800000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="August 6"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596715200000"
              role="gridcell"
            >
              6
            </td>
            <td
              aria-label="August 7"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596801600000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="August 8"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596888000000"
              role="gridcell"
            >
              8
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`<Calendar /> renders the previous month 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to May 2020
          </title>
          <use
            xlink:href="#arrow-left.svg"
          />
        </svg>
        <button
          class="year-button"
        >
          June 2020
          <svg
            class="change-year-icon"
            height="6"
            role="img"
            width="10"
          >
            <use
              xlink:href="#caret-down.svg"
            />
          </svg>
        </button>
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to July 2020
          </title>
          <use
            xlink:href="#arrow-right.svg"
          />
        </svg>
      </div>
      <table
        class="calendar-grid"
        role="grid"
      >
        <thead>
          <tr>
            <th
              class="weekday"
            >
              S
            </th>
            <th
              class="weekday"
            >
              M
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              W
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              F
            </th>
            <th
              class="weekday"
            >
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              aria-label="May 31"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1590926400000"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="June 1"
              aria-selected="false"
              class="date"
              data-epoch="1591012800000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="June 2"
              aria-selected="false"
              class="date"
              data-epoch="1591099200000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="June 3"
              aria-selected="false"
              class="date"
              data-epoch="1591185600000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="June 4"
              aria-selected="false"
              class="date"
              data-epoch="1591272000000"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="June 5"
              aria-selected="false"
              class="date"
              data-epoch="1591358400000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="June 6"
              aria-selected="false"
              class="date"
              data-epoch="1591444800000"
              role="gridcell"
            >
              6
            </td>
          </tr>
          <tr>
            <td
              aria-label="June 7"
              aria-selected="false"
              class="date"
              data-epoch="1591531200000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="June 8"
              aria-selected="false"
              class="date"
              data-epoch="1591617600000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="June 9"
              aria-selected="false"
              class="date"
              data-epoch="1591704000000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="June 10"
              aria-selected="false"
              class="date"
              data-epoch="1591790400000"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="June 11"
              aria-selected="false"
              class="date"
              data-epoch="1591876800000"
              role="gridcell"
            >
              11
            </td>
            <td
              aria-label="June 12"
              aria-selected="false"
              class="date"
              data-epoch="1591963200000"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="June 13"
              aria-selected="false"
              class="date"
              data-epoch="1592049600000"
              role="gridcell"
            >
              13
            </td>
          </tr>
          <tr>
            <td
              aria-label="June 14"
              aria-selected="false"
              class="date"
              data-epoch="1592136000000"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="June 15"
              aria-selected="false"
              class="date"
              data-epoch="1592222400000"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="June 16"
              aria-selected="false"
              class="date"
              data-epoch="1592308800000"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="June 17"
              aria-selected="false"
              class="date"
              data-epoch="1592395200000"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="June 18"
              aria-selected="false"
              class="date"
              data-epoch="1592481600000"
              role="gridcell"
            >
              18
            </td>
            <td
              aria-label="June 19"
              aria-selected="false"
              class="date"
              data-epoch="1592568000000"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="June 20"
              aria-selected="false"
              class="date"
              data-epoch="1592654400000"
              role="gridcell"
            >
              20
            </td>
          </tr>
          <tr>
            <td
              aria-label="June 21"
              aria-selected="false"
              class="date"
              data-epoch="1592740800000"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="June 22"
              aria-selected="false"
              class="date"
              data-epoch="1592827200000"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="June 23"
              aria-selected="false"
              class="date"
              data-epoch="1592913600000"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="June 24"
              aria-selected="false"
              class="date"
              data-epoch="1593000000000"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="June 25"
              aria-selected="false"
              class="date"
              data-epoch="1593086400000"
              role="gridcell"
            >
              25
            </td>
            <td
              aria-label="June 26"
              aria-selected="false"
              class="date"
              data-epoch="1593172800000"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="June 27"
              aria-selected="false"
              class="date"
              data-epoch="1593259200000"
              role="gridcell"
            >
              27
            </td>
          </tr>
          <tr>
            <td
              aria-label="June 28"
              aria-selected="false"
              class="date"
              data-epoch="1593345600000"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="June 29"
              aria-selected="false"
              class="date"
              data-epoch="1593432000000"
              role="gridcell"
            >
              29
            </td>
            <td
              aria-label="June 30"
              aria-selected="false"
              class="date"
              data-epoch="1593518400000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 1"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593604800000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="July 2"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593691200000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="July 3"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593777600000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="July 4"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593864000000"
              role="gridcell"
            >
              4
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 5"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593950400000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="July 6"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594036800000"
              role="gridcell"
            >
              6
            </td>
            <td
              aria-label="July 7"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594123200000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="July 8"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594209600000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="July 9"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594296000000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="July 10"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594382400000"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="July 11"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594468800000"
              role="gridcell"
            >
              11
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`<Calendar /> renders the previous year 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to June 2019
          </title>
          <use
            xlink:href="#arrow-left.svg"
          />
        </svg>
        <button
          class="year-button"
        >
          July 2019
          <svg
            class="change-year-icon"
            height="6"
            role="img"
            width="10"
          >
            <use
              xlink:href="#caret-down.svg"
            />
          </svg>
        </button>
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to August 2019
          </title>
          <use
            xlink:href="#arrow-right.svg"
          />
        </svg>
      </div>
      <table
        class="calendar-grid"
        role="grid"
      >
        <thead>
          <tr>
            <th
              class="weekday"
            >
              S
            </th>
            <th
              class="weekday"
            >
              M
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              W
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              F
            </th>
            <th
              class="weekday"
            >
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              aria-label="June 30"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1561896000000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 1"
              aria-selected="false"
              class="date"
              data-epoch="1561982400000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="July 2"
              aria-selected="false"
              class="date"
              data-epoch="1562068800000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="July 3"
              aria-selected="false"
              class="date"
              data-epoch="1562155200000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="July 4"
              aria-selected="false"
              class="date"
              data-epoch="1562241600000"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="July 5"
              aria-selected="false"
              class="date"
              data-epoch="1562328000000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="July 6"
              aria-selected="false"
              class="date"
              data-epoch="1562414400000"
              role="gridcell"
            >
              6
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 7"
              aria-selected="false"
              class="date"
              data-epoch="1562500800000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="July 8"
              aria-selected="false"
              class="date"
              data-epoch="1562587200000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="July 9"
              aria-selected="false"
              class="date"
              data-epoch="1562673600000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="July 10"
              aria-selected="false"
              class="date"
              data-epoch="1562760000000"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="July 11"
              aria-selected="false"
              class="date"
              data-epoch="1562846400000"
              role="gridcell"
            >
              11
            </td>
            <td
              aria-label="July 12"
              aria-selected="false"
              class="date"
              data-epoch="1562932800000"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="July 13"
              aria-selected="false"
              class="date"
              data-epoch="1563019200000"
              role="gridcell"
            >
              13
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 14"
              aria-selected="false"
              class="date"
              data-epoch="1563105600000"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="July 15"
              aria-selected="false"
              class="date"
              data-epoch="1563192000000"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="July 16"
              aria-selected="false"
              class="date"
              data-epoch="1563278400000"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="July 17"
              aria-selected="false"
              class="date"
              data-epoch="1563364800000"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="July 18"
              aria-selected="false"
              class="date"
              data-epoch="1563451200000"
              role="gridcell"
            >
              18
            </td>
            <td
              aria-label="July 19"
              aria-selected="false"
              class="date"
              data-epoch="1563537600000"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="July 20"
              aria-selected="false"
              class="date"
              data-epoch="1563624000000"
              role="gridcell"
            >
              20
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 21"
              aria-selected="false"
              class="date"
              data-epoch="1563710400000"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="July 22"
              aria-selected="false"
              class="date"
              data-epoch="1563796800000"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="July 23"
              aria-selected="false"
              class="date"
              data-epoch="1563883200000"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="July 24"
              aria-selected="false"
              class="date"
              data-epoch="1563969600000"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="July 25"
              aria-selected="false"
              class="date"
              data-epoch="1564056000000"
              role="gridcell"
            >
              25
            </td>
            <td
              aria-label="July 26"
              aria-selected="false"
              class="date"
              data-epoch="1564142400000"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="July 27"
              aria-selected="false"
              class="date"
              data-epoch="1564228800000"
              role="gridcell"
            >
              27
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 28"
              aria-selected="false"
              class="date"
              data-epoch="1564315200000"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="July 29"
              aria-selected="false"
              class="date"
              data-epoch="1564401600000"
              role="gridcell"
              tabindex="0"
            >
              29
            </td>
            <td
              aria-label="July 30"
              aria-selected="false"
              class="date"
              data-epoch="1564488000000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 31"
              aria-selected="false"
              class="date"
              data-epoch="1564574400000"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="August 1"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564660800000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="August 2"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564747200000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="August 3"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564833600000"
              role="gridcell"
            >
              3
            </td>
          </tr>
          <tr>
            <td
              aria-label="August 4"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564920000000"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="August 5"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565006400000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="August 6"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565092800000"
              role="gridcell"
            >
              6
            </td>
            <td
              aria-label="August 7"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565179200000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="August 8"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565265600000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="August 9"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565352000000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="August 10"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565438400000"
              role="gridcell"
            >
              10
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;
